parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class SEMICOLON program
Rule 2     program -> class SEMICOLON
Rule 3     class -> CLASS TYPE inheritence LBRACE features RBRACE
Rule 4     inheritence -> INHERITS TYPE
Rule 5     inheritence -> empty
Rule 6     features -> feature SEMICOLON features
Rule 7     features -> empty
Rule 8     feature -> method_declaration
Rule 9     feature -> attribute
Rule 10    attribute -> id_type
Rule 11    attribute -> id_type ASSIGN expression
Rule 12    id_type -> ID TDOTS TYPE
Rule 13    method_declaration -> ID LBRACKET formals RBRACKET TDOTS TYPE block
Rule 14    block -> LBRACE expression_list RBRACE
Rule 15    formals -> id_type COMMA formals
Rule 16    formals -> id_type
Rule 17    formals -> empty
Rule 18    expression_list -> expression SEMICOLON expression_list
Rule 19    expression_list -> expression SEMICOLON
Rule 20    expression -> assign
Rule 21    expression -> upper_non
Rule 22    upper_non -> NOT upper_non
Rule 23    upper_non -> operator_non
Rule 24    operator_non -> k_arith LTHAN k_arith
Rule 25    operator_non -> k_arith LETHAN k_arith
Rule 26    operator_non -> k_arith EQUALS k_arith
Rule 27    operator_non -> k_arith
Rule 28    k_arith -> arith
Rule 29    k_arith -> e_arith
Rule 30    assign -> ID ASSIGN expression
Rule 31    arith -> arith PLUS term
Rule 32    arith -> arith MINUS term
Rule 33    arith -> term
Rule 34    term -> term TIMES factor
Rule 35    term -> term DIVIDE factor
Rule 36    term -> factor
Rule 37    factor -> MINUS factor
Rule 38    factor -> atom
Rule 39    atom -> LBRACKET expression RBRACKET
Rule 40    atom -> INTEGER
Rule 41    atom -> STRING
Rule 42    atom -> ID
Rule 43    atom -> TRUE
Rule 44    atom -> FALSE
Rule 45    atom -> ISVOID expression
Rule 46    atom -> block
Rule 47    atom -> conditional
Rule 48    atom -> loop
Rule 49    atom -> case
Rule 50    atom -> dispatch
Rule 51    atom -> NEW TYPE
Rule 52    atom -> BCOMPLEMENT expression
Rule 53    e_arith -> arith PLUS e_term
Rule 54    e_arith -> arith MINUS e_term
Rule 55    e_arith -> e_term
Rule 56    e_term -> e_term TIMES e_factor
Rule 57    e_term -> e_term DIVIDE e_factor
Rule 58    e_term -> e_factor
Rule 59    e_factor -> MINUS e_factor
Rule 60    e_factor -> let_expression
Rule 61    let_expression -> LET declaration_list IN expression
Rule 62    declaration_list -> declaration COMMA declaration_list
Rule 63    declaration_list -> declaration
Rule 64    declaration -> id_type ASSIGN expression
Rule 65    declaration -> id_type
Rule 66    conditional -> IF expression THEN expression ELSE expression FI
Rule 67    loop -> WHILE expression LOOP expression POOL
Rule 68    case -> CASE expression OF implications ESAC
Rule 69    implications -> implication COMMA implications
Rule 70    implications -> implication
Rule 71    implication -> id_type IMPLY expression
Rule 72    dispatch -> expression especific DOT dispatch_call
Rule 73    dispatch -> dispatch_call
Rule 74    especific -> DISP TYPE
Rule 75    especific -> empty
Rule 76    dispatch_call -> ID LBRACKET params_expression RBRACKET
Rule 77    params_expression -> expression
Rule 78    params_expression -> expression COMMA params_expression
Rule 79    params_expression -> empty
Rule 80    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 11 30 64
BCOMPLEMENT          : 52
CASE                 : 68
CLASS                : 3
COMMA                : 15 62 69 78
DISP                 : 74
DIVIDE               : 35 57
DOT                  : 72
ELSE                 : 66
EQUALS               : 26
ESAC                 : 68
FALSE                : 44
FI                   : 66
ID                   : 12 13 30 42 76
IF                   : 66
IMPLY                : 71
IN                   : 61
INHERITS             : 4
INTEGER              : 40
ISVOID               : 45
LBRACE               : 3 14
LBRACKET             : 13 39 76
LET                  : 61
LETHAN               : 25
LOOP                 : 67
LTHAN                : 24
MINUS                : 32 37 54 59
NEW                  : 51
NOT                  : 22
OF                   : 68
PLUS                 : 31 53
POOL                 : 67
RBRACE               : 3 14
RBRACKET             : 13 39 76
SEMICOLON            : 1 2 6 18 19
STRING               : 41
TDOTS                : 12 13
THEN                 : 66
TIMES                : 34 56
TRUE                 : 43
TYPE                 : 3 4 12 13 51 74
WHILE                : 67
error                : 

Nonterminals, with rules where they appear

arith                : 28 31 32 53 54
assign               : 20
atom                 : 38
attribute            : 9
block                : 13 46
case                 : 49
class                : 1 2
conditional          : 47
declaration          : 62 63
declaration_list     : 61 62
dispatch             : 50
dispatch_call        : 72 73
e_arith              : 29
e_factor             : 56 57 58 59
e_term               : 53 54 55 56 57
empty                : 5 7 17 75 79
especific            : 72
expression           : 11 18 19 30 39 45 52 61 64 66 66 66 67 67 68 71 72 77 78
expression_list      : 14 18
factor               : 34 35 36 37
feature              : 6
features             : 3 6
formals              : 13 15
id_type              : 10 11 15 16 64 65 71
implication          : 69 70
implications         : 68 69
inheritence          : 3
k_arith              : 24 24 25 25 26 26 27
let_expression       : 60
loop                 : 48
method_declaration   : 8
operator_non         : 23
params_expression    : 76 78
program              : 1 0
term                 : 31 32 33 34 35
upper_non            : 21 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class SEMICOLON program
    (2) program -> . class SEMICOLON
    (3) class -> . CLASS TYPE inheritence LBRACE features RBRACE

    CLASS           shift and go to state 3

    program                        shift and go to state 1
    class                          shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> class . SEMICOLON program
    (2) program -> class . SEMICOLON

    SEMICOLON       shift and go to state 4


state 3

    (3) class -> CLASS . TYPE inheritence LBRACE features RBRACE

    TYPE            shift and go to state 5


state 4

    (1) program -> class SEMICOLON . program
    (2) program -> class SEMICOLON .
    (1) program -> . class SEMICOLON program
    (2) program -> . class SEMICOLON
    (3) class -> . CLASS TYPE inheritence LBRACE features RBRACE

    $end            reduce using rule 2 (program -> class SEMICOLON .)
    CLASS           shift and go to state 3

    class                          shift and go to state 2
    program                        shift and go to state 6

state 5

    (3) class -> CLASS TYPE . inheritence LBRACE features RBRACE
    (4) inheritence -> . INHERITS TYPE
    (5) inheritence -> . empty
    (80) empty -> .

    INHERITS        shift and go to state 8
    LBRACE          reduce using rule 80 (empty -> .)

    inheritence                    shift and go to state 7
    empty                          shift and go to state 9

state 6

    (1) program -> class SEMICOLON program .

    $end            reduce using rule 1 (program -> class SEMICOLON program .)


state 7

    (3) class -> CLASS TYPE inheritence . LBRACE features RBRACE

    LBRACE          shift and go to state 10


state 8

    (4) inheritence -> INHERITS . TYPE

    TYPE            shift and go to state 11


state 9

    (5) inheritence -> empty .

    LBRACE          reduce using rule 5 (inheritence -> empty .)


state 10

    (3) class -> CLASS TYPE inheritence LBRACE . features RBRACE
    (6) features -> . feature SEMICOLON features
    (7) features -> . empty
    (8) feature -> . method_declaration
    (9) feature -> . attribute
    (80) empty -> .
    (13) method_declaration -> . ID LBRACKET formals RBRACKET TDOTS TYPE block
    (10) attribute -> . id_type
    (11) attribute -> . id_type ASSIGN expression
    (12) id_type -> . ID TDOTS TYPE

    RBRACE          reduce using rule 80 (empty -> .)
    ID              shift and go to state 17

    features                       shift and go to state 12
    feature                        shift and go to state 13
    empty                          shift and go to state 14
    method_declaration             shift and go to state 15
    attribute                      shift and go to state 16
    id_type                        shift and go to state 18

state 11

    (4) inheritence -> INHERITS TYPE .

    LBRACE          reduce using rule 4 (inheritence -> INHERITS TYPE .)


state 12

    (3) class -> CLASS TYPE inheritence LBRACE features . RBRACE

    RBRACE          shift and go to state 19


state 13

    (6) features -> feature . SEMICOLON features

    SEMICOLON       shift and go to state 20


state 14

    (7) features -> empty .

    RBRACE          reduce using rule 7 (features -> empty .)


state 15

    (8) feature -> method_declaration .

    SEMICOLON       reduce using rule 8 (feature -> method_declaration .)


state 16

    (9) feature -> attribute .

    SEMICOLON       reduce using rule 9 (feature -> attribute .)


state 17

    (13) method_declaration -> ID . LBRACKET formals RBRACKET TDOTS TYPE block
    (12) id_type -> ID . TDOTS TYPE

    LBRACKET        shift and go to state 21
    TDOTS           shift and go to state 22


state 18

    (10) attribute -> id_type .
    (11) attribute -> id_type . ASSIGN expression

    SEMICOLON       reduce using rule 10 (attribute -> id_type .)
    ASSIGN          shift and go to state 23


state 19

    (3) class -> CLASS TYPE inheritence LBRACE features RBRACE .

    SEMICOLON       reduce using rule 3 (class -> CLASS TYPE inheritence LBRACE features RBRACE .)


state 20

    (6) features -> feature SEMICOLON . features
    (6) features -> . feature SEMICOLON features
    (7) features -> . empty
    (8) feature -> . method_declaration
    (9) feature -> . attribute
    (80) empty -> .
    (13) method_declaration -> . ID LBRACKET formals RBRACKET TDOTS TYPE block
    (10) attribute -> . id_type
    (11) attribute -> . id_type ASSIGN expression
    (12) id_type -> . ID TDOTS TYPE

    RBRACE          reduce using rule 80 (empty -> .)
    ID              shift and go to state 17

    feature                        shift and go to state 13
    features                       shift and go to state 24
    empty                          shift and go to state 14
    method_declaration             shift and go to state 15
    attribute                      shift and go to state 16
    id_type                        shift and go to state 18

state 21

    (13) method_declaration -> ID LBRACKET . formals RBRACKET TDOTS TYPE block
    (15) formals -> . id_type COMMA formals
    (16) formals -> . id_type
    (17) formals -> . empty
    (12) id_type -> . ID TDOTS TYPE
    (80) empty -> .

    ID              shift and go to state 25
    RBRACKET        reduce using rule 80 (empty -> .)

    formals                        shift and go to state 26
    id_type                        shift and go to state 27
    empty                          shift and go to state 28

state 22

    (12) id_type -> ID TDOTS . TYPE

    TYPE            shift and go to state 29


state 23

    (11) attribute -> id_type ASSIGN . expression
    (20) expression -> . assign
    (21) expression -> . upper_non
    (30) assign -> . ID ASSIGN expression
    (22) upper_non -> . NOT upper_non
    (23) upper_non -> . operator_non
    (24) operator_non -> . k_arith LTHAN k_arith
    (25) operator_non -> . k_arith LETHAN k_arith
    (26) operator_non -> . k_arith EQUALS k_arith
    (27) operator_non -> . k_arith
    (28) k_arith -> . arith
    (29) k_arith -> . e_arith
    (31) arith -> . arith PLUS term
    (32) arith -> . arith MINUS term
    (33) arith -> . term
    (53) e_arith -> . arith PLUS e_term
    (54) e_arith -> . arith MINUS e_term
    (55) e_arith -> . e_term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (56) e_term -> . e_term TIMES e_factor
    (57) e_term -> . e_term DIVIDE e_factor
    (58) e_term -> . e_factor
    (37) factor -> . MINUS factor
    (38) factor -> . atom
    (59) e_factor -> . MINUS e_factor
    (60) e_factor -> . let_expression
    (39) atom -> . LBRACKET expression RBRACKET
    (40) atom -> . INTEGER
    (41) atom -> . STRING
    (42) atom -> . ID
    (43) atom -> . TRUE
    (44) atom -> . FALSE
    (45) atom -> . ISVOID expression
    (46) atom -> . block
    (47) atom -> . conditional
    (48) atom -> . loop
    (49) atom -> . case
    (50) atom -> . dispatch
    (51) atom -> . NEW TYPE
    (52) atom -> . BCOMPLEMENT expression
    (61) let_expression -> . LET declaration_list IN expression
    (14) block -> . LBRACE expression_list RBRACE
    (66) conditional -> . IF expression THEN expression ELSE expression FI
    (67) loop -> . WHILE expression LOOP expression POOL
    (68) case -> . CASE expression OF implications ESAC
    (72) dispatch -> . expression especific DOT dispatch_call
    (73) dispatch -> . dispatch_call
    (76) dispatch_call -> . ID LBRACKET params_expression RBRACKET

    ID              shift and go to state 33
    NOT             shift and go to state 34
    MINUS           shift and go to state 40
    LBRACKET        shift and go to state 46
    INTEGER         shift and go to state 47
    STRING          shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    ISVOID          shift and go to state 51
    NEW             shift and go to state 57
    BCOMPLEMENT     shift and go to state 58
    LET             shift and go to state 59
    LBRACE          shift and go to state 60
    IF              shift and go to state 61
    WHILE           shift and go to state 62
    CASE            shift and go to state 63

    expression                     shift and go to state 30
    assign                         shift and go to state 31
    upper_non                      shift and go to state 32
    operator_non                   shift and go to state 35
    k_arith                        shift and go to state 36
    arith                          shift and go to state 37
    e_arith                        shift and go to state 38
    term                           shift and go to state 39
    e_term                         shift and go to state 41
    factor                         shift and go to state 42
    e_factor                       shift and go to state 43
    atom                           shift and go to state 44
    let_expression                 shift and go to state 45
    block                          shift and go to state 52
    conditional                    shift and go to state 53
    loop                           shift and go to state 54
    case                           shift and go to state 55
    dispatch                       shift and go to state 56
    dispatch_call                  shift and go to state 64

state 24

    (6) features -> feature SEMICOLON features .

    RBRACE          reduce using rule 6 (features -> feature SEMICOLON features .)


state 25

    (12) id_type -> ID . TDOTS TYPE

    TDOTS           shift and go to state 22


state 26

    (13) method_declaration -> ID LBRACKET formals . RBRACKET TDOTS TYPE block

    RBRACKET        shift and go to state 65


state 27

    (15) formals -> id_type . COMMA formals
    (16) formals -> id_type .

    COMMA           shift and go to state 66
    RBRACKET        reduce using rule 16 (formals -> id_type .)


state 28

    (17) formals -> empty .

    RBRACKET        reduce using rule 17 (formals -> empty .)


state 29

    (12) id_type -> ID TDOTS TYPE .

    ASSIGN          reduce using rule 12 (id_type -> ID TDOTS TYPE .)
    SEMICOLON       reduce using rule 12 (id_type -> ID TDOTS TYPE .)
    COMMA           reduce using rule 12 (id_type -> ID TDOTS TYPE .)
    RBRACKET        reduce using rule 12 (id_type -> ID TDOTS TYPE .)
    IN              reduce using rule 12 (id_type -> ID TDOTS TYPE .)
    IMPLY           reduce using rule 12 (id_type -> ID TDOTS TYPE .)


state 30

    (11) attribute -> id_type ASSIGN expression .
    (72) dispatch -> expression . especific DOT dispatch_call
    (74) especific -> . DISP TYPE
    (75) especific -> . empty
    (80) empty -> .

    SEMICOLON       reduce using rule 11 (attribute -> id_type ASSIGN expression .)
    DISP            shift and go to state 68
    DOT             reduce using rule 80 (empty -> .)

    especific                      shift and go to state 67
    empty                          shift and go to state 69

state 31

    (20) expression -> assign .

    DISP            reduce using rule 20 (expression -> assign .)
    DOT             reduce using rule 20 (expression -> assign .)
    SEMICOLON       reduce using rule 20 (expression -> assign .)
    RBRACKET        reduce using rule 20 (expression -> assign .)
    TIMES           reduce using rule 20 (expression -> assign .)
    DIVIDE          reduce using rule 20 (expression -> assign .)
    PLUS            reduce using rule 20 (expression -> assign .)
    MINUS           reduce using rule 20 (expression -> assign .)
    LTHAN           reduce using rule 20 (expression -> assign .)
    LETHAN          reduce using rule 20 (expression -> assign .)
    EQUALS          reduce using rule 20 (expression -> assign .)
    THEN            reduce using rule 20 (expression -> assign .)
    LOOP            reduce using rule 20 (expression -> assign .)
    OF              reduce using rule 20 (expression -> assign .)
    COMMA           reduce using rule 20 (expression -> assign .)
    IN              reduce using rule 20 (expression -> assign .)
    ELSE            reduce using rule 20 (expression -> assign .)
    POOL            reduce using rule 20 (expression -> assign .)
    FI              reduce using rule 20 (expression -> assign .)
    ESAC            reduce using rule 20 (expression -> assign .)


state 32

    (21) expression -> upper_non .

    DISP            reduce using rule 21 (expression -> upper_non .)
    DOT             reduce using rule 21 (expression -> upper_non .)
    SEMICOLON       reduce using rule 21 (expression -> upper_non .)
    RBRACKET        reduce using rule 21 (expression -> upper_non .)
    TIMES           reduce using rule 21 (expression -> upper_non .)
    DIVIDE          reduce using rule 21 (expression -> upper_non .)
    PLUS            reduce using rule 21 (expression -> upper_non .)
    MINUS           reduce using rule 21 (expression -> upper_non .)
    LTHAN           reduce using rule 21 (expression -> upper_non .)
    LETHAN          reduce using rule 21 (expression -> upper_non .)
    EQUALS          reduce using rule 21 (expression -> upper_non .)
    THEN            reduce using rule 21 (expression -> upper_non .)
    LOOP            reduce using rule 21 (expression -> upper_non .)
    OF              reduce using rule 21 (expression -> upper_non .)
    COMMA           reduce using rule 21 (expression -> upper_non .)
    IN              reduce using rule 21 (expression -> upper_non .)
    ELSE            reduce using rule 21 (expression -> upper_non .)
    POOL            reduce using rule 21 (expression -> upper_non .)
    FI              reduce using rule 21 (expression -> upper_non .)
    ESAC            reduce using rule 21 (expression -> upper_non .)


state 33

    (30) assign -> ID . ASSIGN expression
    (42) atom -> ID .
    (76) dispatch_call -> ID . LBRACKET params_expression RBRACKET

    ASSIGN          shift and go to state 70
    TIMES           reduce using rule 42 (atom -> ID .)
    DIVIDE          reduce using rule 42 (atom -> ID .)
    PLUS            reduce using rule 42 (atom -> ID .)
    MINUS           reduce using rule 42 (atom -> ID .)
    LTHAN           reduce using rule 42 (atom -> ID .)
    LETHAN          reduce using rule 42 (atom -> ID .)
    EQUALS          reduce using rule 42 (atom -> ID .)
    DISP            reduce using rule 42 (atom -> ID .)
    DOT             reduce using rule 42 (atom -> ID .)
    SEMICOLON       reduce using rule 42 (atom -> ID .)
    RBRACKET        reduce using rule 42 (atom -> ID .)
    THEN            reduce using rule 42 (atom -> ID .)
    LOOP            reduce using rule 42 (atom -> ID .)
    OF              reduce using rule 42 (atom -> ID .)
    COMMA           reduce using rule 42 (atom -> ID .)
    IN              reduce using rule 42 (atom -> ID .)
    ELSE            reduce using rule 42 (atom -> ID .)
    POOL            reduce using rule 42 (atom -> ID .)
    FI              reduce using rule 42 (atom -> ID .)
    ESAC            reduce using rule 42 (atom -> ID .)
    LBRACKET        shift and go to state 71


state 34

    (22) upper_non -> NOT . upper_non
    (22) upper_non -> . NOT upper_non
    (23) upper_non -> . operator_non
    (24) operator_non -> . k_arith LTHAN k_arith
    (25) operator_non -> . k_arith LETHAN k_arith
    (26) operator_non -> . k_arith EQUALS k_arith
    (27) operator_non -> . k_arith
    (28) k_arith -> . arith
    (29) k_arith -> . e_arith
    (31) arith -> . arith PLUS term
    (32) arith -> . arith MINUS term
    (33) arith -> . term
    (53) e_arith -> . arith PLUS e_term
    (54) e_arith -> . arith MINUS e_term
    (55) e_arith -> . e_term
    (34) term -> . term TIMES factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (56) e_term -> . e_term TIMES e_factor
    (57) e_term -> . e_term DIVIDE e_factor
    (58) e_term -> . e_factor
    (37) factor -> . MINUS factor
    (38) factor -> . atom
    (59) e_factor -> . MINUS e_factor
    (60) e_factor -> . let_expression
    (39) atom -> . LBRACKET expression RBRACKET
    (40) atom -> . INTEGER
    (41) atom -> . STRING
    (42) atom -> . ID
    (43) atom -> . TRUE
    (44) atom -> . FALSE
    (45) atom -> . ISVOID expression
    (46) atom -> . block
    (47) atom -> . conditional
    (48) atom -> . loop
    (49) atom -> . case
    (50) atom -> . dispatch
    (51) atom -> . NEW TYPE
    (52) atom -> . BCOMPLEMENT expression
    (61) let_expression -> . LET declaration_list IN expression
    (14) block -> . LBRACE expression_list RBRACE
    (66) conditional -> . IF expression THEN expression ELSE expression FI
    (67) loop -> . WHILE expression LOOP expression POOL
    (68) case -> . CASE expression OF implications ESAC
    (72) dispatch -> . expression especific DOT dispatch_call
    (73) dispatch -> . dispatch_call
    (20) expression -> . assign
    (21) expression -> . upper_non
    (76) dispatch_call -> . ID LBRACKET params_expression RBRACKET
    (30) assign -> . ID ASSIGN expression

    NOT             shift and go to state 34
    MINUS           shift and go to state 40
    LBRACKET        shift and go to state 46
    INTEGER         shift and go to state 47
    STRING          shift and go to state 48
    ID              shift and go to state 74
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    ISVOID          shift and go to state 51
    NEW             shift and go to state 57
    BCOMPLEMENT     shift and go to state 58
    LET             shift and go to state 59
    LBRACE          shift and go to state 60
    IF              shift and go to state 61
    WHILE           shift and go to state 62
    CASE            shift and go to state 63
